<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> FITNESS AND GYM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- define main function -->
    <string name="gym_training">GYM TRAINGING</string>
    <string name="gym_training_women">WOMEN GYM TRAINGING</string>
    <string name="heart_traking">HEART TRACKER</string>
    <string name="bmi">BMI</string>
    <string name="health_nutrition_tip">HEALTH-NUTRITION</string>
    <string name="calendar">CALENDAR</string>
    <string name="profile">PROFILE</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="regsiter">REGSITER</string>
    <string name="edit_profile">EDIT PROFILE</string>

    <!-- BMI Screen -->
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="result">Result</string>
    <string name="cm">Centimet</string>
    <string name="kilogram">Kilogram</string>
    <string name="under_weight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="morbidly_obese">Morbidly Obese</string>
    <string name="ideal_bmi">Ideal BMI </string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="name">Name </string>
    <string name="birdth">Birdthday </string>
    <string name="bpm_index">BPM </string>
    <string name="tap_to_start">Tap to start</string>
    <string name="history">History</string>
    <string name="double_dot">:</string>
    <string name="msg_input_name">Please enter name</string>
    <string name="save">SAVE</string>

    <string name="lightning">Begin</string>
    <string name="color_baloonss">Color Baloons</string>
    <string name="natural_walll">Natural Wall</string>
</resources>