<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF"
    >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_40dp"
    android:orientation="horizontal"
    android:weightSum="4"
    android:layout_marginTop="@dimen/dimen_20dp"
    >
    <TextView 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/name"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/green_dam"
        android:paddingLeft="@dimen/dimen_5dp"
        />
    <TextView 
        android:layout_width="@dimen/dimen_10dp"
        android:layout_height="wrap_content"
        android:text="@string/double_dot"
        android:textSize="@dimen/dimen_20dp"
        android:textColor="@color/green_dam"
        />
    <TextView 
        android:id="@+id/heart_name_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:textColor="@color/green_dam"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18dp"
        />
</LinearLayout>


<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_40dp"
    android:orientation="horizontal"
    android:weightSum="4"
    >
    <TextView 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/bpm_index"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/green_dam"
        android:paddingLeft="@dimen/dimen_5dp"
        />
    <TextView 
        android:layout_width="@dimen/dimen_10dp"
        android:layout_height="wrap_content"
        android:text="@string/double_dot"
        android:textSize="@dimen/dimen_20dp"
        android:textColor="@color/green_dam"
        />
    <TextView 
        android:id="@+id/heart_bpm_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:textColor="@color/green_dam"
        />
</LinearLayout>
<LinearLayout 
    android:id="@+id/rl_start_id"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_50dp"
    android:background="#CFCFCF"
    android:orientation="horizontal"
    android:weightSum="2"
    android:gravity="center"
    >
    
    <TextView 
        android:id="@+id/txt_history_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:singleLine="true"
        android:textColor="@color/green_dam"
        android:text="@string/history"
        android:textSize="@dimen/dimen_20dp"
        android:gravity="center"
        />
    <TextView 
        android:id="@+id/txt_taptostart_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:text="@string/tap_to_start"
        android:textSize="@dimen/dimen_20dp"
        android:gravity="center"
        />
</LinearLayout>

<ListView 
    android:id="@+id/history_heart_lv_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:dividerHeight="@dimen/dimen_2dp"
    ></ListView>
</LinearLayout>
