<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.vn.hm.view.RoundImageView
            android:id="@+id/menu_avatar_id"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher"
            android:visibility="invisible" >
        </com.vn.hm.view.RoundImageView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100dp"
            android:background="@drawable/banner"
            android:src="@drawable/banner" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/menu_scroll_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_5dp" >

        <LinearLayout
            android:id="@+id/menu_main_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_gym" />

                <TextView
                    android:id="@+id/menu_gym_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/textview_selector"
                    android:text="@string/gym_training"
                    android:textColor="#696969"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_heart_track" />

                <TextView
                    android:id="@+id/menu_heart_tracker_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:background="@drawable/textview_selector"
                    android:text="@string/heart_traking"
                    android:textColor="#696969"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_bmi" />
            <TextView
                android:id="@+id/menu_bmi_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:background="@drawable/textview_selector"
                android:text="@string/bmi"
                android:textColor="#696969"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_20dp" />
			</LinearLayout>
			
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_nutrition" />
            <TextView
                android:id="@+id/menu_health_nutrition_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:background="@drawable/textview_selector"
                android:text="@string/health_nutrition_tip"
                android:textColor="#696969"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/dimen_20dp" />
			</LinearLayout>	
			<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_calendar" />
            <TextView
                android:id="@+id/menu_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:background="@drawable/textview_selector"
                android:text="@string/calendar"
                android:textColor="#696969"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/dimen_18sp" />
			</LinearLayout>
            <LinearLayout
                android:id="@+id/menu_f6_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="6" >

                <TextView
                    android:id="@+id/menu_profileid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_weight="4"
                    android:background="@drawable/textview_selector"
                    android:text="@string/profile"
                    android:textColor="#696969"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimen_20dp" />

                <ImageView
                    android:id="@+id/menu_img_profile_id"
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_weight="2"
                    android:background="@null"
                    android:src="@drawable/icon_next" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_profile_function_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40dp"
                android:layout_marginRight="@dimen/dimen_40dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/menu_ll_login_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="6" >

                    <ImageView
                        android:layout_width="@dimen/dimen_20dp"
                        android:layout_height="@dimen/dimen_20dp"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_weight="2"
                        android:background="@null"
                        android:src="@drawable/icon_next" />

                    <TextView
                        android:id="@+id/menu_login_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_weight="4"
                        android:background="@drawable/textview_selector"
                        android:text="@string/login"
                        android:textColor="#696969"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_menu_editprofile_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="6" >

                    <ImageView
                        android:layout_width="@dimen/dimen_20dp"
                        android:layout_height="@dimen/dimen_20dp"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_weight="2"
                        android:background="@null"
                        android:src="@drawable/icon_next" />

                    <TextView
                        android:id="@+id/menu_editprofile_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_weight="4"
                        android:background="@drawable/textview_selector"
                        android:text="@string/edit_profile"
                        android:textColor="#696969"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_20dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>